--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "express": "^4.19.2",
     "mongoose": "^8.3.4",
     "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": "20.13.1",
+    "npm": "10.7.0"
   }
 }
